tests/cases/require-refs-fail.stderr
error: custom attribute panicked
 --> tests/cases/require-refs-fail.rs:3:1
  |
3 | #[autoprops_component]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid argument: test : i8 (must be a reference)
